<resources>
    <string name="app_name">Notepad</string>

    <string name="note_title">Note Title</string>
    <string name="note_text">Note Text</string>
    <string name="sync_enabled">Sync Enabled</string>
    <string name="sync_disabled">Sync Disabled</string>
    <string name="show_ads">Show Ads</string>
    <string name="sync_notes">Sync Notes</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="primary">Primary</string>
    <string name="secondary">Secondary</string>
    <string name="accent">Accent</string>
    <string name="colours">Colours</string>
    <string name="interface_style">Interface</string>
    <string name="red">Red:</string>
    <string name="green">Green:</string>
    <string name="blue">Blue:</string>
    <string name="r">R</string>
    <string name="g">G</string>
    <string name="b">B</string>
    <string name="hex_code">hex:</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="file_name">File Name:</string>
    <string name="created">Created:</string>
    <string name="modified">Modified:</string>
    <string name="size">Size:</string>

    <string name="style_light">Light</string>
    <string name="style_dark">dark</string>

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <string name="header_ads">Ads</string>
    <string name="header_sync">Sync</string>
    <string name="hint_text_ads">Ads are free to turn off at any time, but please consider leaving them on to support Notepad\'s development</string>
    
    <string name="icon_description_options">More Options</string>
    <string name="icon_description_account">Account Image</string>
    <string name="icon_description_settings">Settings Icon</string>
    <string name="icon_description_sync">Sync Icon</string>
    <string name="icon_description_theme">Theme Icon</string>
    <string name="icon_description_next">Next Icon</string>
    <string name="icon_description_add">Add Icon</string>

    <string name="copyright">Notepad 1.0b \n Copyright 2015 \u00A9 DelilahEve</string>

    <string name="action_settings">Settings</string>
    <string name="action_theme">Theme</string>

    <string name="name_placeholder">Not Signed In</string>
    <string name="email_placeholder">tap the account image to sign in</string>

    <string-array name="note_options">
        <item>Send&#8230;</item>
        <item>Note Details</item>
        <item>Close</item>
        <item>Delete</item>
    </string-array>

    <string-array name="note_options_listview">
        <item>Send&#8230;</item>
        <item>Note Details</item>
        <item>Delete</item>
    </string-array>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
