<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundCardColour" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <View
            android:id="@+id/colour_preview"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/primary" />

        <TextView
            android:id="@+id/colour_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/primary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="?attr/textContent" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/red"
        android:textSize="14sp"
        android:textColor="?attr/textContent" />

    <SeekBar
        android:id="@+id/red_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:max="255" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/green"
        android:textSize="14sp"
        android:textColor="?attr/textContent" />

    <SeekBar
        android:id="@+id/green_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:max="255" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/blue"
        android:textSize="14sp"
        android:textColor="?attr/textContent" />

    <SeekBar
        android:id="@+id/blue_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:max="255" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/hex_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_margin="8dp"
            android:inputType="number"
            android:textColorHint="?attr/textFaded"
            android:textColor="?attr/textContent" />

        <EditText
            android:id="@+id/rgb_red"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:inputType="number"
            android:hint="@string/r"
            android:textColorHint="?attr/textFaded"
            android:textColor="?attr/textContent"/>

        <EditText
            android:id="@+id/rgb_green"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:inputType="number"
            android:hint="@string/g"
            android:textColorHint="?attr/textFaded" />

        <EditText
            android:id="@+id/rgb_blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:inputType="number"
            android:hint="@string/b"
            android:textColorHint="?attr/textFaded" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/reset"
            android:textSize="18sp"
            android:textColor="?attr/textContent"
            android:clickable="true"
            android:background="?attr/selectableItemBackground" />

        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:textColor="?attr/textContent"
            android:clickable="true"
            android:background="?attr/selectableItemBackground" />

        <TextView
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/save"
            android:textSize="18sp"
            android:textColor="?attr/textContent"
            android:clickable="true"
            android:background="?attr/selectableItemBackground" />

    </LinearLayout>

</LinearLayout>