<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?attr/backgroundCardColour" >

    <TextView
        android:id="@+id/ads_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_ads"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="?attr/textContent" />

    <View
        android:id="@+id/ads_header_divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/textDark" />

    <LinearLayout
        android:id="@+id/ads_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/show_ads"
            android:textColor="?attr/textContent"
            android:textSize="14sp" />

        <Switch
            android:id="@+id/ads_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <TextView
        android:id="@+id/ads_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/hint_text_ads"
        android:textColor="?attr/textFaded" />

    <TextView
        android:id="@+id/sync_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/header_sync"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="?attr/textContent" />

    <View
        android:id="@+id/sync_header_divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/textDark" />

    <LinearLayout
        android:id="@+id/sync_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/sync_notes"
            android:textColor="?attr/textContent"
            android:textSize="14sp" />

        <Switch
            android:id="@+id/sync_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <TextView
        android:id="@+id/sync_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:padding="12dp"
        android:text="@string/sync_disabled"
        android:textColor="?attr/textFaded" />

</LinearLayout>