<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="?attr/backgroundColour" >

    <RelativeLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" >

        <LinearLayout
            android:id="@+id/account_container"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="vertical"
            android:background="@color/primary" >

            <ImageView
                android:id="@+id/account_chooser"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/icon_account"
                android:contentDescription="@string/icon_description_account" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical"
                android:layout_gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxHeight="100dp"
                    android:text="@string/name_placeholder"
                    android:textColor="?attr/textToolbar"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxHeight="100dp"
                    android:text="@string/email_placeholder"
                    android:textColor="?attr/textFaded"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_below="@id/account_container"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/bottom_shadow" />

        <LinearLayout
            android:id="@+id/sync_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_above="@+id/options_container"
            android:layout_alignParentRight="true" >

            <TextView
                android:id="@+id/sync_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/sync_disabled"
                android:textColor="?attr/textFaded" />

            <ImageView
                android:id="@+id/sync_state_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="8dp"
                android:layout_gravity="center_vertical"
                android:src="?attr/iconSyncDisabled"
                android:contentDescription="@string/icon_description_sync" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/options_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/account_container" >

            <LinearLayout
                android:id="@+id/settings_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="22dp"
                android:orientation="horizontal"
                android:clickable="true"
                android:background="?attr/selectableItemBackground" >

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:src="?attr/iconSettings"
                    android:contentDescription="@string/icon_description_settings"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:text="@string/action_settings"
                    android:textSize="20sp"
                    android:textColor="?attr/textContent" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@color/textLightFaded" />

            <LinearLayout
                android:id="@+id/theme_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="22dp"
                android:orientation="horizontal"
                android:clickable="true"
                android:background="?attr/selectableItemBackground" >

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:src="?attr/iconTheme"
                    android:contentDescription="@string/icon_description_theme" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:text="@string/action_theme"
                    android:textSize="20sp"
                    android:textColor="?attr/textContent" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>