<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundCardColour" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="?attr/textContent"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:text="@string/colours" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#222"/>

    <LinearLayout
        android:id="@+id/primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:orientation="horizontal"
        android:background="?attr/selectableItemBackground" >

        <View
            android:id="@+id/primaryPreview"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/primary" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/primary"
            android:textSize="16sp"
            android:textColor="?attr/textContent" />
        
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="?attr/iconNext"
            android:contentDescription="@string/icon_description_next" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textLightFaded" />

    <LinearLayout
        android:id="@+id/secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:orientation="horizontal"
        android:background="?attr/selectableItemBackground" >

        <View
            android:id="@+id/secondaryPreview"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/secondary" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/secondary"
            android:textSize="16sp"
            android:textColor="?attr/textContent" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="?attr/iconNext"
            android:contentDescription="@string/icon_description_next" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textLightFaded" />

    <LinearLayout
        android:id="@+id/accent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:orientation="horizontal"
        android:background="?attr/selectableItemBackground" >

        <View
            android:id="@+id/accentPreview"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/accent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/accent"
            android:textSize="16sp"
            android:textColor="?attr/textContent" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="?attr/iconNext"
            android:contentDescription="@string/icon_description_next" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="?attr/textContent"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:text="@string/interface_style" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#222"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:orientation="horizontal"
            android:gravity="center" >

            <RadioButton
                android:id="@+id/light_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/style_light"
                android:textColor="?attr/textContent" />

            <View
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/dark_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/style_dark"
                android:textColor="?attr/textContent" />

        </RadioGroup>

    </LinearLayout>

</LinearLayout>