<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="?attr/backgroundColour" >

    <FrameLayout
        android:id="@+id/main_content_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="55dp"/>

    <!-- AdView here -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp" >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/action_drawer"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:src="?attr/iconMenu"
                    android:contentDescription="@string/sort" />

                <TextView
                    android:id="@+id/activity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:gravity="center_vertical"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/app_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="?attr/textToolbar" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="5dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/action_sort"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:padding="8dp"
                    android:src="?attr/iconSort"
                    android:contentDescription="@string/sort" />

                <ImageView
                    android:id="@+id/action_search"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:padding="8dp"
                    android:src="?attr/iconSearch"
                    android:contentDescription="@string/search" />

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_below="@+id/toolbar"
            android:background="@drawable/bottom_shadow" />

    </RelativeLayout>

    <fragment
        android:id="@+id/left_drawer"
        android:layout_width="270dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:name="ca.delilaheve.notepad.fragment.NavigationDrawerFragment" />

</android.support.v4.widget.DrawerLayout>
